==> ENGRsao/MICROCONTROLLER_PROGRAMMING/ST7789/ST7789.c <==
#include <stdint.h>
#include <stdbool.h>
#include "ST7789.h"
 #define pgm_read_byte(addr) (*(const unsigned char *)(addr))
 #define pgm_read_word(addr) (*(const unsigned short *)(addr))
 #define pgm_read_dword(addr) (*(const unsigned long *)(addr))
#define min(a,b) (((a) < (b)) ? (a) : (b))
#define _swap_int16_t(a, b) { int16_t t = a; a = b; b = t; }

void writeData(uin8_t data)
{
  DC_DATA;
  SPI_START;
  SPI_transfer(cmd);
  SPI_END;
}

void displayInit(uint8_t *address)
{
	uint8_t numCommands, numArgs;
	uint16_t ms;
	//SPI_START;
	numCommands = *address++;   // Number of commands to follow
	while(numCommands--){
		writeCommand(*address++);
		numArgs = *address++;
		ms = numArgs & ST_CMD_DELAY;
		numArgs &= ~ST_CMD_DELAY;
		while(numArgs--){
			SPI_transfer(address);
		}
		if(ms){
			ms = *address++;
			if(ms == 255) ms = 500;
			__delay_ms(ms);
		}
	}
	//SPI_END
}

void setAddrWindow(uint8_t x, uint8_t y, uint8_t w, uint8_t h) {
  x += _xstart;
  y += _ystart;
  SPI_START;
  DC_COMMAND;
  writeCommand(ST77XX_CASET); // Column addr set
  DC_DATA;
  SPI_transfer(0);
  SPI_transfer(x);
  SPI_transfer(0);
  SPI_transfer(x+w-1);
  DC_COMMAND;
  writeCommand(ST77XX_RASET); // Row addr set
  DC_DATA;
  SPI_transfer(0);
  SPI_transfer(y);
  SPI_transfer(0);
  SPI_transfer(y+h-1);
  DC_COMMAND;
  writeCommand(ST77XX_RAMWR); // write to RAM
  SPI_END
}

void setRotation(uint8_t m) {
  uint8_t madctl = 0;

  rotation = m & 3; // can't be higher than 3
writeCommand(ST77XX_MADCTL);
  switch (rotation) {
   case 0:
     madctl  = ST77XX_MADCTL_MX | ST77XX_MADCTL_MY | ST77XX_MADCTL_RGB;
     _xstart = _colstart;
     _ystart = _rowstart;
     break;
   case 1:
     madctl  = ST77XX_MADCTL_MY | ST77XX_MADCTL_MV | ST77XX_MADCTL_RGB;
     _xstart = _rowstart;
     _ystart = _colstart;
     break;
  case 2:
     madctl  = ST77XX_MADCTL_RGB;
     _xstart = _rowstart;
     _ystart = _colstart;
     break;
   case 3:
     madctl  = ST77XX_MADCTL_MX | ST77XX_MADCTL_MV | ST77XX_MADCTL_RGB;
     _xstart = _rowstart;
     _ystart = _colstart;
     break;
  }
  //SPI_START;
  
  writeData(madctl);
  //SPI_END;
}

void drawPixel(uint8_t x, uint8_t y, uint16_t color) {
	if(x<0 ||x>=_width || y<0 || y>=_height) return;
  if((x < _width) && (y < _height)) {
	  setAddrWindow(x, y, x+1, y+1);
    SPI_START;
	DC_DATA;
    SPI_transfer(color >> 8);
    SPI_transfer(color & 0xFF);
    SPI_END;
  }
}

void invertDisplay(bool i) {
    SPI_START;
    writeCommand(i ? ST77XX_INVON : ST77XX_INVOFF);
    SPI_END;
}

void invertDisplay(bool mode) 
{
  writeCommand(!mode ? ST7789_INVON : ST7789_INVOFF);  // modes inverted?
}

void Arduino_ST7789::resetDisplay() 
{
  writeCommand(ST7789_SWRESET);
  __delay_ms(10);
}

void drawChar(int16_t x, int16_t y, unsigned char c,  uint16_t color, uint16_t bg, uint8_t size) {
   // drawChar(x, y, c, color, bg, size, size);
   if(!gfxFont) { // 'Classic' built-in font

        if((x >= _width)            || // Clip right
           (y >= _height)           || // Clip bottom
           ((x + 6 * size_x - 1) < 0) || // Clip left
           ((y + 8 * size_y - 1) < 0))   // Clip top
            return;

        if(!_cp437 && (c >= 176)) c++; // Handle 'classic' charset behavior

        SPI_START;
        for(uint8_t i=0; i<5; i++ ) { // Char bitmap = 5 columns
            uint8_t line = pgm_read_byte(&font[c * 5 + i]);
            for(uint8_t j=0; j<8; j++, line >>= 1) {
                if(line & 1) {
                    if(size_x == 1 && size_y == 1)
                        writePixel(x+i, y+j, color);
                    else
                        writeFillRect(x+i*size_x, y+j*size_y, size_x, size_y, color);
                } else if(bg != color) {
                    if(size_x == 1 && size_y == 1)
                        writePixel(x+i, y+j, bg);
                    else
                        writeFillRect(x+i*size_x, y+j*size_y, size_x, size_y, bg);
                }
            }
        }
        if(bg != color) { // If opaque, draw vertical line for last column
            if(size_x == 1 && size_y == 1) writeFastVLine(x+5, y, 8, bg);
            else          writeFillRect(x+5*size_x, y, size_x, 8*size_y, bg);
        }
        SPI_END;
   }
else { // Custom font

        // Character is assumed previously filtered by write() to eliminate
        // newlines, returns, non-printable characters, etc.  Calling
        // drawChar() directly with 'bad' characters of font may cause mayhem!

        c -= (uint8_t)pgm_read_byte(&gfxFont->first);
        GFXglyph *glyph  = pgm_read_glyph_ptr(gfxFont, c);
        uint8_t  *bitmap = pgm_read_bitmap_ptr(gfxFont);

        uint16_t bo = pgm_read_word(&glyph->bitmapOffset);
        uint8_t  w  = pgm_read_byte(&glyph->width),
                 h  = pgm_read_byte(&glyph->height);
        int8_t   xo = pgm_read_byte(&glyph->xOffset),
                 yo = pgm_read_byte(&glyph->yOffset);
        uint8_t  xx, yy, bits = 0, bit = 0;
        int16_t  xo16 = 0, yo16 = 0;

        if(size_x > 1 || size_y > 1) {
            xo16 = xo;
            yo16 = yo;
        }

        // Todo: Add character clipping here

        // NOTE: THERE IS NO 'BACKGROUND' COLOR OPTION ON CUSTOM FONTS.
        // THIS IS ON PURPOSE AND BY DESIGN.  The background color feature
        // has typically been used with the 'classic' font to overwrite old
        // screen contents with new data.  This ONLY works because the
        // characters are a uniform size; it's not a sensible thing to do with
        // proportionally-spaced fonts with glyphs of varying sizes (and that
        // may overlap).  To replace previously-drawn text when using a custom
        // font, use the getTextBounds() function to determine the smallest
        // rectangle encompassing a string, erase the area with fillRect(),
        // then draw new text.  This WILL infortunately 'blink' the text, but
        // is unavoidable.  Drawing 'background' pixels will NOT fix this,
        // only creates a new set of problems.  Have an idea to work around
        // this (a canvas object type for MCUs that can afford the RAM and
        // displays supporting setAddrWindow() and pushColors()), but haven't
        // implemented this yet.

        SPI_START;
        for(yy=0; yy<h; yy++) {
            for(xx=0; xx<w; xx++) {
                if(!(bit++ & 7)) {
                    bits = pgm_read_byte(&bitmap[bo++]);
                }
                if(bits & 0x80) {
                    if(size_x == 1 && size_y == 1) {
                        writePixel(x+xo+xx, y+yo+yy, color);
                    } else {
                        writeFillRect(x+(xo16+xx)*size_x, y+(yo16+yy)*size_y,
                          size_x, size_y, color);
                    }
                }
                bits <<= 1;
            }
        }
        SPI_END;

    } // End classic vs custom font
}
